--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,10 @@ server.port=9001
 
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
-#hello-service.ConnectTimeout=5000
-#hello-service.ReadTimeout=20000
-#hello-service.ribbon.OkToRetryOnAllOperations=true
-#hello-service.ribbon.MaxAutoRetriesNextServer=5
-#hello-service.ribbon.MaxAutoRetries=5
+hello-service.ConnectTimeout=500
+hello-service.ReadTimeout=2000
+hello-service.ribbon.OkToRetryOnAllOperations=true
+hello-service.ribbon.MaxAutoRetriesNextServer=5
+hello-service.ribbon.MaxAutoRetries=5
+
+logging.level.com.didispace.feignconsumer.service.HelloService=DEBUG
